# advent-of-code-2021

./: Cargo.toml  LICENSE
day-01/: Cargo.toml
day-02/src/: main.rs
day-03/: Cargo.toml  task.txt
day-03/src/: cli_parser.rs  main.rs
day-04/: Cargo.toml
day-04/src/: cli_parser.rs  io.rs  main.rs  part1.rs
day-1/src/: main.rs
day-2/: Cargo.toml
day-2/src/: main.rs
src/: lib.rs
src/day03/: task.txt
src/day05/: task.txt
src/day06/: task.txt
