[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "day01"
path = "src/day01/bin/main.rs"

[[bin]]
name = "day02"
path = "src/day02/bin/main.rs"

[[bin]]
name = "day03"
path = "src/day03/bin/main.rs"

[[bin]]
name = "day04"
path = "src/day04/bin/main.rs"

[[bin]]
name = "day05"
path = "src/day05/bin/main.rs"

[[bin]]
name = "day06"
path = "src/day06/bin/main.rs"

[dependencies]
clap = "*"
bit_field = "*"
ndarray = "*"
